Bug #24150
LibRadosMiscPool.PoolCreationRace segv
Status:
Resolved
Priority:
Normal
Assignee:
-
Category:
-
Target version:
-
% Done:
0%
Source:
Tags:
Backport:
mimic
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):
Description
[ RUN ] LibRadosMiscPool.PoolCreationRace *** Caught signal (Segmentation fault) ** in thread 7f81c520f200 thread_name:ceph_test_rados ceph version 13.1.0-354-g7989c3421c (7989c3421ca6104a66d2665946bbc1aa5d364da8) nautilus (dev) 1: (()+0x95f00) [0x55cffdd16f00] 2: (()+0x12a70) [0x7f81c4e09a70] 3: (rados_aio_read()+0x62) [0x7f81c48fa532] 4: (LibRadosMiscPool_PoolCreationRace_Test::TestBody()+0x485) [0x55cffdccc5b5] 5: (void testing::internal::HandleExceptionsInMethodIfSupported<testing::Test, void>(testing::Test*, void (testing::Test::*)(), char const*)+0x4a) [0x55cffdd3b51a] 6: (testing::Test::Run()+0xba) [0x55cffdd2fbfa] 7: (testing::TestInfo::Run()+0xaf) [0x55cffdd2fcdf] 8: (testing::TestCase::Run()+0xb5) [0x55cffdd2fe15] 9: (testing::internal::UnitTestImpl::RunAllTests()+0x468) [0x55cffdd30308] 10: (bool testing::internal::HandleExceptionsInMethodIfSupported<testing::internal::UnitTestImpl, bool>(testing::internal::UnitTestImpl*, bool (testing::internal::UnitTestImpl::*)(), char const*)+0x4a) [0x55cffdd3b9da] 11: (testing::UnitTest::Run()+0x5d) [0x55cffdd3048d] 12: (main()+0xec) [0x55cffdccabac] 13: (__libc_start_main()+0xea) [0x7f81b94c503a] 14: (_start()+0x2a) [0x55cffdccb3da]
/a/sage-2018-05-16_15:59:20-rados-wip-sage3-testing-2018-05-14-1429-distro-basic-smithi/2539676
bug exists in master
Related issues
History
#1 Updated by Sage Weil over 4 years ago
- Status changed from 12 to Fix Under Review
#2 Updated by Sage Weil over 4 years ago
- Status changed from Fix Under Review to Pending Backport
#3 Updated by Kefu Chai over 4 years ago
- Duplicated by Bug #24076: rados/test.sh fails in "bin/ceph_test_rados_api_misc --gtest_filter=*PoolCreationRace*" added
#4 Updated by Nathan Cutler over 4 years ago
- Copied to Backport #24204: mimic: LibRadosMiscPool.PoolCreationRace segv added
#5 Updated by Nathan Cutler over 4 years ago
- Status changed from Pending Backport to Resolved